<resources>
    <string name="app_name">photo-selector</string>

    <string name="back">返回</string>
    <string name="picture">图片</string>
    <string name="complete">完成</string>

    <string name="picture_all">所有图片</string>
    <string name="picture_original">原图</string>
    <string name="preview">预览</string>

    <string name="picture_photo">相册图片</string>
    <string name="open_camera">打开相机</string>
    <string name="take_photo">拍摄照片</string>
    <string name="record_video">录制视频</string>
    <string name="select">选择</string>
    <string name="video">视频</string>

    <string name="picture_and_video">图片和视频</string>
    <string name="all_picture">所有图片</string>
    <string name="all_video">所有视频</string>

    <string name="confirm">确定(%d/%d)</string>
    <string name="cancel">取消</string>
</resources>
