<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bottom"
    tools:context=".SelectorActivity">

    <include
        android:id="@+id/action_bar"
        layout="@layout/action_bar" />

    <GridView
        android:id="@+id/gv_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="48dp"
        android:background="@android:color/white"
        android:divider="@android:color/darker_gray"
        android:horizontalSpacing="1dp"
        android:numColumns="4"
        android:verticalSpacing="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/action_bar" />

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/layout_directory"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="48dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@+id/action_bar">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:background="@android:color/white"
            android:scrollbars="vertical"
            app:behavior_hideable="true"
            app:behavior_peekHeight="450dp"
            app:layout_behavior="@string/bottom_sheet_behavior">

            <dev.yong.photo.view.SpreadListView
                android:id="@+id/lv_directory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@android:color/darker_gray"
                android:dividerHeight="0.1dp" />

        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>

    <TextView
        android:id="@+id/tv_directory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_directory_selector"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:text="@string/picture_all"
        android:textColor="@drawable/btn_text_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gv_image"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/rb_original"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:background="@null"
        android:padding="3dp"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:text="@string/picture_original"
        android:textColor="@drawable/btn_text_selector"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gv_image" />

    <TextView
        android:id="@+id/tv_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_click_selector"
        android:clickable="false"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/preview"
        android:textColor="@drawable/btn_text_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gv_image" />

</android.support.constraint.ConstraintLayout>